# casecraft

./: .env.example  .gitignore  CLAUDE.md  HARDCODED_VALUES_FIXED.md  Makefile  README.md  README_MULTI_PROVIDER.md  debug_casecraft.py  debug_structured_output.py  default_templates.yaml  ecommerce_api_openapi.json  kimi_response_1755099304.json  merge_report.md  pyproject.toml  test_engine_excel_20250821_151909.xlsx  test_excel_20250821_143552.xlsx  test_merged_by_endpoint_20250821_151909.xlsx  test_merged_by_module_20250821_151909.xlsx  test_merged_single_20250821_151909.xlsx  verify_kimi_compatibility.py  用例模板.md
.casecraft/: config.yaml
casecraft/: __init__.py
casecraft/cli/: __init__.py  cleanup_command.py  generate_command.py  generate_command_multi.py  init_command.py  main.py
casecraft/config/: __init__.py  default_templates.yaml  template_manager.py
casecraft/core/: __init__.py  api_parser.py  engine.py  generator_engine.py  headers_analyzer.py  multi_provider_engine.py  output_manager.py  state_manager.py
casecraft/core/analysis/: __init__.py  case_id_generator.py  constants.py  criticality_analyzer.py  description_generator.py  module_analyzer.py  module_detector.py  path_analyzer.py  postcondition_generator.py  precondition_generator.py  priority_assigner.py
casecraft/core/generation/: __init__.py  batch_strategy.py  llm_client.py  test_generator.py
casecraft/core/management/: __init__.py  config_manager.py  enhanced_state_manager.py  migrate_state.py  multi_provider_config_manager.py  output_manager.py  state_manager.py
casecraft/core/parsing/: __init__.py  api_parser.py  headers_analyzer.py
casecraft/core/providers/: __init__.py  base.py  deepseek_provider.py  exceptions.py  fallback.py  glm_provider.py  kimi_provider.py  local_provider.py  qwen_provider.py  registry.py
casecraft/core/providers/strategies/: __init__.py  base.py  complexity_strategy.py  manual.py  random_strategy.py  round_robin.py
casecraft/models/: __init__.py  api_spec.py  config.py  provider_config.py  provider_state.py  state.py  test_case.py  usage.py
casecraft/utils/: __init__.py  concurrency.py  config_helper.py  constants.py  excel_merger.py  exceptions.py  file_cleanup.py  file_utils.py  formatters.py  json_cleaner.py  logging.py  ui.py
demo_test_cases/: post_api_v1_auth_register_test_cases.json
docs/: README_MULTI_PROVIDER.md  merge-to-master-plan.md  multi-llm-provider-design.md  需求文档.md
docs/archive/: multi-llm-implementation-tasks.md
prompts/2025-08-22/: POST_api_v1_cart_items_233050.txt
prompts/2025-08-23/: POST_api_v1_cart_items_015516.txt
tests/: __init__.py  conftest.py
tests/fixtures/: openapi_v3_sample.yaml  swagger_v2_sample.json
tests/providers/: __init__.py
tests/unit/: test_api_parser.py  test_batch_strategy.py  test_config_manager.py  test_error_handling.py  test_headers_analyzer.py  test_llm_client.py  test_output_manager.py  test_state_manager.py  test_test_generator.py
